# NBAKickBallTracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
data/: games.db  kickballs.db  minutes.db  players.db  teams.db
src/: cron.sh  main.py
src/kickball/: data_analysis.py  db_updates.py  email.py  kickballs.py  main.py  player_info.py  utils.py
